Fixes issues causing horizontal scroll

--- a/app/_scss/pages/_program.scss
+++ b/app/_scss/pages/_program.scss
@@ -65,6 +65,10 @@
 				p, h2 {
 					width: 92%;
 				}
+
+				h2 {
+					padding-right: 0;
+				}
 			}
 		}
 	}
