--- a/app/_scss/sitewide/_base.scss
+++ b/app/_scss/sitewide/_base.scss
@@ -332,7 +332,7 @@ ul.cta li, ol.cta li {
 	}
 
 	body>section.expanded {
-		width: 90%;
+		width: 89%;
 		max-width: inherit;
 	}
 }
